<resources>
    <string name="app_name">ДМБ Таймер</string>

    <string name="percent">проценты</string>
    <string name="seconds">секунды</string>
    <string name="minutes">минуты</string>
    <string name="hours">часы</string>
    <string name="passed">прошло</string>
    <string name="left">осталось</string>
    <string name="days">дни</string>
    <string name="months_days">месяцы и дни</string>
    <string name="months_weeks_days">месяцы, недели и дни</string>
    <string name="weeks_days">недели и дни</string>
    <string name="next">далее</string>
    <string name="back">назад</string>

    <array name="my_steps">
        <item>Имя</item>
        <item>Дата</item>
        <item>Фото</item>
    </array>

    <string name="name">Имя</string>
    <string name="step1">Для начала введи имя</string>
    <string name="step2">Теперь выберите дату</string>
    <string name="step3">Если хотите, можете добавить и фотографию</string>
    <string name="menu_stub">заглушка</string>
    <string name="diagram">диаграмма</string>
    <string name="statistic">статистика</string>
    <string name="move_to_right">move to right</string>

    //Перевод календаря
    <string name="material_calendar_monday">ПН</string>
    <string name="material_calendar_tuesday">ВТ</string>
    <string name="material_calendar_wednesday">СР</string>
    <string name="material_calendar_thursday">ЧТ</string>
    <string name="material_calendar_friday">ПН</string>
    <string name="material_calendar_saturday">СБ</string>
    <string name="material_calendar_sunday">ВС</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

</resources>
